--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,8 +1,15 @@
 {% extends 'base.html.twig' %}
-
+{% block stylesheets %}
+    <!-- Social Buttons CSS -->
+    <link href="../vendor/bootstrap-social/bootstrap-social.css" rel="stylesheet">
+{% endblock %}
 {% block body %}
+    <a class="btn btn-block btn-social btn-facebook" href="{{ path('facebook_connect') }}" style="width: 20%">
+        <i class="fa fa-facebook"></i> Sign in with Facebook
+    </a>
 
-          <h1>Hello World!</h1>
 
+{% endblock %}
 
+{% block addjavascripts %}
 {% endblock %}
