--- a/app/Resources/views/default/navbar.html.twig
+++ b/app/Resources/views/default/navbar.html.twig
@@ -11,8 +11,10 @@
     </div>
     <!-- /.navbar-header -->
 
+
     <ul class="nav navbar-top-links navbar-right">
         <li class="dropdown">
+            {% if app.User %}
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                 <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
             </a>
@@ -26,11 +28,13 @@
                 </li>
             </ul>
             <!-- /.dropdown-user -->
+            {% endif %}
         </li>
         <!-- /.dropdown -->
     </ul>
     <!-- /.navbar-top-links -->
 
+    {% if app.User %}
     <div class="navbar-default sidebar" role="navigation">
         <div class="sidebar-nav navbar-collapse">
             <ul class="nav" id="side-menu">
@@ -51,4 +55,5 @@
         <!-- /.sidebar-collapse -->
     </div>
     <!-- /.navbar-static-side -->
+    {% endif %}
 </nav>
