--- a/app/Resources/views/default/navbar.html.twig
+++ b/app/Resources/views/default/navbar.html.twig
@@ -19,12 +19,12 @@
                 <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
             </a>
             <ul class="dropdown-menu dropdown-user">
-                <li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
-                </li>
-                <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
-                </li>
-                <li class="divider"></li>
-                <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                {#<li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>#}
+                {#</li>#}
+                {#<li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>#}
+                {#</li>#}
+                {#<li class="divider"></li>#}
+                <li><a href="{{ path('fos_user_security_logout') }}"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                 </li>
             </ul>
             <!-- /.dropdown-user -->
@@ -40,14 +40,14 @@
             <ul class="nav" id="side-menu">
 
                 <li>
-                    <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                    <a href="#"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                 </li>
 
                 <li>
-                    <a href="tables.html"><i class="fa fa-table fa-fw"></i> Tables</a>
+                    <a href="#"><i class="fa fa-table fa-fw"></i> Tables</a>
                 </li>
                 <li>
-                    <a href="forms.html"><i class="fa fa-edit fa-fw"></i> Forms</a>
+                    <a href="#"><i class="fa fa-edit fa-fw"></i> Forms</a>
                 </li>
 
             </ul>
