--- a/app/Resources/views/default/navbar.html.twig
+++ b/app/Resources/views/default/navbar.html.twig
@@ -44,10 +44,10 @@
                 </li>
 
                 <li>
-                    <a href="#"><i class="fa fa-table fa-fw"></i> Tables</a>
+                    <a href="{{ path('fbpost_index') }}"><i class="fa fa-table fa-fw"></i>Posty</a>
                 </li>
                 <li>
-                    <a href="#"><i class="fa fa-edit fa-fw"></i> Forms</a>
+                    <a href="{{ path('fbendpoint_index') }}"><i class="fa fa-edit fa-fw"></i>Facebook</a>
                 </li>
 
             </ul>
