--- a/app/Resources/views/fbpost/index.html.twig
+++ b/app/Resources/views/fbpost/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <h1>FbPost list</h1>
 
-    <table>
+    <table class="table">
         <thead>
             <tr>
                 <th>Id</th>
@@ -34,7 +34,6 @@
         {% endfor %}
         </tbody>
     </table>
-
     <ul>
         <li>
             <a href="{{ path('fbpost_new') }}">Create a new entry</a>
