--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -26,6 +26,9 @@
     <!-- Custom Fonts -->
     <link href="{{ asset('vendor/font-awesome/css/font-awesome.css') }}" rel="stylesheet" type="text/css">
 
+    <!-- Jquery data table -->
+    <link href="{{ asset('css/jquery.dataTables.min..css') }}" rel="stylesheet" type="text/css">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -67,6 +70,9 @@
 
 <!-- Custom Theme JavaScript -->
 <script src="{{ asset('dist/css/sb-admin-2.css') }}"></script>
+
+<!-- Data Table JavaScript -->
+<script src="{{ asset('js/jquery.dataTables.min.js') }}"></script>
 
 {% block addjavascripts %}
 {% endblock %}
