--- a/app/Resources/views/fbpage/new.html.twig
+++ b/app/Resources/views/fbpage/new.html.twig
@@ -1,7 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Wyszukaj fanpage lub grupę z facebooka</h1>
+    <h3>Wyszukaj swoją stronę w imieniu której chcesz publikować posty</h3>
+    <h5>Uwaga musisz posiadać uprawnienia do zarządzania tą stroną na facebooku!</h5>
 
     {{ form_start(form) }}
     <div class="form-group">
@@ -12,17 +13,6 @@
             <div class="col-md-6">
                 {{ form_widget(form.search, {'attr' :{'class' : 'form-control'}}) }}
                 {{ form_errors(form.search) }}
-            </div>
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="row">
-            <div class="col-md-2">
-                Wybierz rodzaj
-            </div>
-            <div class="col-md-6">
-                {{ form_widget(form.type, {'attr' :{'class' : 'form-control'}}) }}
-                {{ form_errors(form.type) }}
             </div>
         </div>
     </div>
