dodwanie postu z publikowaniem jako strona

--- a/app/Resources/views/fbpost/new.html.twig
+++ b/app/Resources/views/fbpost/new.html.twig
@@ -36,6 +36,21 @@
                 </div>
             </div>
         </div>
+        <div class="form-group">
+            <div class="row">
+                <div class="col-md-2">
+                    <label>Publikuj jako</label>
+                </div>
+                <div class="col-md-10">
+                    <select class="form-control" id="sel1">
+                        <option value="user">JA</option>
+                        {% for page in pages %}
+                            <option value="{{ page.fbId }}">{{ page.name }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+            </div>
+        </div>
 
         <button type="submit" class="btn btn-default" id="button">Zapisz</button>
 
@@ -115,6 +130,8 @@
                 var message = $("#{{ form.message.vars.id }}").val();
                 var link = $("#{{ form.link.vars.id }}").val();
 
+                var option = $("#sel1").find(":selected").val();
+
                 var checkedValues = $('input:checkbox:checked').map(function() {
                     return this.value;
                 }).get();
@@ -122,7 +139,8 @@
                 $.post( url, {
                     checkedValues: checkedValues,
                     message: message,
-                    link:   link
+                    link:   link,
+                    publishAs: option
                 }, function( data ) {
                     if(data['success'] == true) {
                         window.location.href = "{{ path('fbpost_index') }}"
