--- a/app/Resources/views/default/navbar.html.twig
+++ b/app/Resources/views/default/navbar.html.twig
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="{{ path('homepage') }}">Swing Swing</a>
+        <a class="navbar-brand" href="{{ path('homepage') }}">Spam spam</a>
     </div>
     <!-- /.navbar-header -->
 
