--- a/app/Resources/views/fbendpoint/index.html.twig
+++ b/app/Resources/views/fbendpoint/index.html.twig
@@ -1,7 +1,13 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>FbEndpoint list</h1>
+    <h1>List stron i grup</h1>
+
+    <ul>
+        <li>
+            <a href="{{ path('fbendpoint_new') }}">Create a new entry</a>
+        </li>
+    </ul>
 
     <table class="table">
         <thead>
@@ -41,9 +47,5 @@
         </tbody>
     </table>
 
-    <ul>
-        <li>
-            <a href="{{ path('fbendpoint_new') }}">Create a new entry</a>
-        </li>
-    </ul>
+
 {% endblock %}
