--- a/app/Resources/views/fbpage/index.html.twig
+++ b/app/Resources/views/fbpage/index.html.twig
@@ -1,7 +1,13 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>FbPage list</h1>
+    <h1>Lista twoich stron</h1>
+
+    <ul>
+        <li>
+            <a href="{{ path('fbpage_new') }}">Create a new entry</a>
+        </li>
+    </ul>
 
     <table class="table">
         <thead>
@@ -35,9 +41,5 @@
         </tbody>
     </table>
 
-    <ul>
-        <li>
-            <a href="{{ path('fbpage_new') }}">Create a new entry</a>
-        </li>
-    </ul>
+
 {% endblock %}
