--- a/app/Resources/views/fbpost/new.html.twig
+++ b/app/Resources/views/fbpost/new.html.twig
@@ -48,6 +48,7 @@
                             <option value="{{ page.fbId }}">{{ page.name }}</option>
                         {% endfor %}
                     </select>
+                    <h5>Strony, którym zarządzasz możesz dodac<a href="{{ path('fbpage_new') }}"> tutaj</a></h5>
                 </div>
             </div>
         </div>
