wylaczenie publikacji jako strona

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -52,6 +52,12 @@
 
         {% endfor %}
 
+        {% for flashMessage in app.session.flashbag.get('notice') %}
+
+            {{ flashMessage }}
+
+        {% endfor %}
+
     {% block body %}
     {% endblock %}
     </div>
