--- a/app/Resources/views/default/navbar.html.twig
+++ b/app/Resources/views/default/navbar.html.twig
@@ -41,9 +41,9 @@
                 <li>
                     <a href="{{ path('fbpost_index') }}"><i class="fa fa-table fa-fw"></i>Posty</a>
                 </li>
-                <li>
-                    <a href="{{ path('fbpage_index') }}"><i class="fa fa-dashboard fa-fw"></i>Twoje strony</a>
-                </li>
+                {#<li>#}
+                    {#<a href="{{ path('fbpage_index') }}"><i class="fa fa-dashboard fa-fw"></i>Twoje strony</a>#}
+                {#</li>#}
                 <li>
                     <a href="{{ path('fbendpoint_index') }}"><i class="fa fa-edit fa-fw"></i>Facebook</a>
                 </li>
