--- a/app/Resources/views/fbpage/new.html.twig
+++ b/app/Resources/views/fbpage/new.html.twig
@@ -8,7 +8,7 @@
     <div class="form-group">
         <div class="row">
             <div class="col-md-2">
-                Podaj link, nazwę lub id
+                Wyszukaj
             </div>
             <div class="col-md-6">
                 {{ form_widget(form.search, {'attr' :{'class' : 'form-control'}}) }}
