--- a/app/Resources/views/fbpost/new.html.twig
+++ b/app/Resources/views/fbpost/new.html.twig
@@ -17,7 +17,7 @@
         <div class="form-group">
             <div class="row">
                 <div class="col-md-2">
-            {{ form_label(form.message) }}
+                    <label>Wiadomość</label>
                 </div>
                 <div class="col-md-10">
             {{ form_widget(form.message, {'attr' :{'class' : 'form-control'}}) }}
@@ -28,7 +28,7 @@
         <div class="form-group">
             <div class="row">
                 <div class="col-md-2">
-                {{ form_label(form.link) }}
+                    <label>Prawidłowy adres</label>
                 </div>
                 <div class="col-md-10">
                     {{ form_widget(form.link, {'attr' :{'class' : 'form-control'}}) }}
@@ -44,9 +44,9 @@
                 <div class="col-md-10">
                     <select class="form-control" id="sel1">
                         <option value="user">JA</option>
-                        {% for page in pages %}
-                            <option value="{{ page.fbId }}">{{ page.name }}</option>
-                        {% endfor %}
+                        {#{% for page in pages %}#}
+                            {#<option value="{{ page.fbId }}">{{ page.name }}</option>#}
+                        {#{% endfor %}#}
                     </select>
                     <h5>Strony, którym zarządzasz możesz dodac<a href="{{ path('fbpage_new') }}"> tutaj</a></h5>
                 </div>
